56763 fix small issue on iphone

--- a/app/design/frontend/Fecon/theme/web/css/source/_footer.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/_footer.less
@@ -27,6 +27,9 @@
                                 .right-block-4,
                                 .right-block-5 {
                                     padding-left: 5px;
+                                    @media (max-width: 480px) {
+                                      padding-left: 0; 
+                                    }
                                 }
                             }
                         }
